fix overflow on mobile devices caused by AOS

--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,11 @@ a:visited {
 .hero {
 	background-color: #f4ead7;
 	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-	/* height: calc(var(--vh, 1vh) * 100); */
+	height: calc(var(--vh, 1vh) * 100);
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	overflow-x: hidden;
 }
 
 /* nav */
@@ -203,6 +204,7 @@ a:visited {
 	/* min-height: -webkit-fill-available; */
 	background-color: #d7f1cb;
 	position: relative;
+	overflow-x: hidden;
 }
 
 .contact-container {
